# sel4cp_kgdb_dev

./: .gitignore  CMakeLists.txt  Makefile  client.c  example.system  gdb.c  hello_world.c  kgdb_dev.system  ping.c  pong.c  proxy.c  security_server.c  server.c
apps/debugger/: CMakeLists.txt  debugger.c
apps/ping/: ping.c
apps/pong/: pong.c
include/: uart.c  util.h
lib/gdb/: CMakeLists.txt  gdb.c
lib/gdb/arch/arm/64/: gdb.c
lib/gdb/include/: gdb.h
lib/gdb/include/arch/arm/64/: gdb.h
lib/printf/: CMakeLists.txt
lib/uart/: CMakeLists.txt
lib/util/: CMakeLists.txt  util.c
lib/util/include/: util.h
